@@ -1,5 +1,9 @@
 2006-04-27  Michal Nazarewicz  <mina86/AT/tlen.pl>
 
+	* Makefile: + mountiso and umountiso are installd in /usr/bin
+	+ games are installed in /usr/local/games
+	+ DEBUG added
+
 	* mpd-show.c: + division by 0 when unknown total length bug fixed
 
 2006-04-25  Michal Nazarewicz  <mina86/AT/tlen.pl>
